# Bashboard

./: .gitignore  CLAUDE.md  README.md  README.ru.md  bashboard.desktop  bashboard.desktop.in  install.sh  main.py  pyproject.toml  requirements.txt  uninstall.sh
.github/workflows/: release.yml
bashboard/: __main__.py  ansi.py  bash_highlighter.py  category_item.py  edit_dialog.py  i18n.py  log_panel.py  main_window.py  manager.py  script.py  script_item.py  script_tree.py  settings.py  theme.py
tests/: run.sh  scripts.json
tests/scripts/: background.sh  colors.sh  date.sh  interactive.sh  run_and_exit.sh
